button issue and tag issue fixed

--- a/day-3-Portfolio-creation/index.html
+++ b/day-3-Portfolio-creation/index.html
@@ -87,7 +87,7 @@
     </article>
 
 
-    <article id=" p">
+    <article id=" s">
     </article>
 
     <article id="project">
@@ -245,15 +245,23 @@
                     <br>
                     <label style="font-weight: 600; font-size: 19px; margin-left: 4rem;"
                         for="suggestion">Suggestion</label>
-                    <textarea style="width: 40%; margin-top: 3rem;" name="suggestion" id="suggestion"></textare>
+                    <textarea style="width: 40%; margin-top: 3rem;" name="suggestion" id="suggestion"></textarea>
+
+                    <div style="width: 100%; height: 50px; display: flex; justify-content: center; margin-top:3rem ;">
+                        <button>submit</button>
+                    </div>
 
 
 
                 </form>
 
             </div>
-        
+
         </section>
+
+
+
+
 
 
     </footer>
