--- a/day-4-responsive-page/index.html
+++ b/day-4-responsive-page/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="mediaqueries.css">
+
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
