--- a/day-4-responsive-page/index.html
+++ b/day-4-responsive-page/index.html
@@ -17,10 +17,21 @@
         rel="stylesheet">
 
 </head>
+<script src="app.js" defer></script>
 
 <body>
 
     <header>
+        <div class="logo-div">
+            Logo</div>
+
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+
         <nav>
             <ul>
                 <li><a href="#"><img style="width:20px; margin-right: 5px;" src="./assets/header/fire.png" alt="">
