--- a/day-6-Bootstrap5-WebsiteBuild/index.html
+++ b/day-6-Bootstrap5-WebsiteBuild/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boostrap</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaQuerys.css">
 
     <!-- Boostrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,21 +28,65 @@
 <body>
 
     <header class="container-fluid">
-        <div class="logo"><img width="40px" style="margin-left: 3rem;" src="assests/header/logo-book.png" alt="">
+        <!-- <div class="logo"><img width="40px" style="margin-left: 3rem;" src="assests/header/logo-book.png" alt="">
             <h3>eLeaarning</h3>
         </div>
         <nav class="navbar-expand-xxl">
             <ul>
                 <li><a class="px-4" style="color: #06bbcc;" href="#">HOME</a></li>
                 <li><a class="px-4" href="#">ABOUT</a></li>
-                <li><a class="px-4" href="#">COURSE</a></li>
+                <li><a class="px-4" href="#">ABOUT</a></li>
                 <li><a class="px-4" href="#">PAGES</a></li>
                 <li><a class="px-4" href="#">CONTACT</a></li>
             </ul>
             <div class="button-div px-5 mx-1 position-relative">Join Now <img width="30px"
                     src="assests/header/right-arrow.png" alt="">
             </div>
+        </nav> -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid slipt-nav">
+
+                <div>
+                    <img width="40px" style="margin-left: 3rem;" class="me-2" src="assests/header/logo-book.png" alt="">
+                    <a class="navbar-brand" href="#">eLeaarning</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">COURSES</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                PAGES
+                            </a>
+
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+                        </li>
+
+
+
+                    </ul>
+
+                    <div class="button-div px-5 mx-1 position-relative">Join Now <img width="30px"
+                            src="assests/header/right-arrow.png" alt="">
+                    </div>
+
+                </div>
+            </div>
         </nav>
+
+
+
     </header>
 
     <main>
@@ -74,8 +119,9 @@
     </main>
 
     <article class="container" id="box-article">
-        <section class="container-fluid px-0">
-            <div class="box-items"><img class="w-auto" src="assests/box-article/eduction.png" alt="">
+        <section class="container-lg px-0">
+            <div class="box-items">
+                <img class="w-auto" src="assests/box-article/eduction.png" alt="">
                 <h3>Skilled Instructors</h3>
                 <p class="px-4 text-center my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex cupiditate,
                     iste
@@ -108,8 +154,11 @@
     </article>
 
     <article class="container" id="about">
-        <section class="w-50 about-img"><img class="" src="assests/about/about-image.jpg" alt=""></section>
-        <section class="ps-5 w-50 about-data">
+        <section class="about-img">
+            <img class="" src="assests/about/about-image.jpg" alt="">
+        </section>
+
+        <section class="ps-5 about-data">
             <h3 class="pt-3">ABOUT US</h3>
             <h1>Welcome to eLEARNING</h1>
 
@@ -186,9 +235,9 @@
             <h4>COURSES</h4>
             <h1 class="my-4 ">Popular Courses</h1>
         </div>
-        <div class="course-box">
+        <div class="course-box main-box">
 
-            <div class="course-box">
+            <div class="course-boxs">
                 <img class="img" src="assests/categories/img1.jpg" alt="">
                 <h2 class="m-0 p-0">$149.00</h2>
                 <div class="stars pb-3"><img src="" alt="">
@@ -217,7 +266,7 @@
                     </div>
                 </div>
             </div>
-            <div class="course-box">
+            <div class="course-boxs">
                 <img class="img" src="assests/categories/img3.jpg" alt="">
                 <h2>$149.00</h2>
                 <div class="stars"><img src="" alt="">
@@ -246,7 +295,7 @@
                     </div>
                 </div>
             </div>
-            <div class="course-box">
+            <div class="course-boxs">
                 <img class="img" src="assests/categories/img2.jpg" alt="">
                 <h2>$149.00</h2>
                 <div class="stars"><img src="" alt="">
