Resolved merge conflicts between main and media-querys

--- a/day-7-finalUI-task/index.html
+++ b/day-7-finalUI-task/index.html
@@ -140,7 +140,7 @@
                 <p>We reached here with our hard work and dedication</p>
             </div>
 
-            <div class="local-div__right">
+            <div class="local-div__right mx-auto">
 
                 <div class="flex-left">
                     <div class="items">
