test case completed

--- a/day-11-DOM-todoList/index.html
+++ b/day-11-DOM-todoList/index.html
@@ -22,7 +22,6 @@
     <main>
         <section>
             <h1>Todo <span style="text-decoration: underline;">List</span></h1>
-
             <div class="todo-block">
                 <input id="todo" type="text" placeholder="Enter the todo">
                 <button id="btn-add" class="btn btn-add" type="submit">Add todo</button>
@@ -32,6 +31,9 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="block"></div>
+
         </section>
     </main>
 
